CHANGES
=======

* Fix for empty search\_vector
* Add travis build logo
* Fix travis postgres host
* Add .travis.yml
* tox.ini: remove hardcoded /code paths
* flake8 tests without splitting into python 2.7/3.4
* Add possibility to provide custom field DB serializers
* tox.ini: python3.4 basepython added for py34
* Tests improvements
* Version bumpup
* Allow SearchManager config to be an iterable
* README: fix info about how to run tests
* Tests: fix imports (relative are ugly) and add one more unicode query test
* Tests: can query postgres by name, no need to hardcode IPs
* Fix VectorField lookup when TSConfig is present
* Django version comparison fix and proper test runner for 1.8
* Fix psycopg's adapting of text
* Use psycopg2 modul for quoting input values

0.9.3
-----

* 0.9.3 Release
* Increase version number
* Add a ChangeLog file
* Add the AUTHORS file
* Update .gitignore file
* Fix flake8 issues
* Add tox.ini to the project
* Update unit tests
* Update requirements
* Update the documentation
* Add docker containers
* Update the settings file
* Package the application with PBR
* Add requirements
* Update README.rst
* Add note in the readme about searching new maintainer
* Fix default behavior of VectorField
* VectorField Defaults Should be Overrideable
* Remove .encode() from quotes method
* Update python3 string handling
* Fix django 1.8 support: using get\_queryset instead of get\_query\_set
* Fix python3 compatibility
* Management command for updating search fields. Usage:  ./manage.py update\_search\_field [options] appname [model] Update search fields in all models or only in specified model

0.9.2
-----

* Update version
* utf-8/unicode fixes AND tests
* ... and more utf-8 fixes
* adapt() expects utf-8 encoded strings
* Move those functions so they can be reused
* Bump version no
* Tests for Django 1.7 full text lookups
* Django 1.7 support
* Migrations & initial SQL for Django 1.7
* Renamed a few things & used psycopg2 quoting