@@ -7,6 +7,4 @@
 build*
 dist
 doc/build
-testing/venv/
-testing/venv16/
 versiontools*
