@@ -15,6 +15,7 @@ Rémy <rgreinho@users.noreply.github.com>
 Rémy Greinhofer <remy.greinhofer@livelovely.com>
 Sam Bolgert <sbolgert@gmail.com>
 Sean Brant <sean@riot9.com>
+Stefano Brentegani <sbrentegani@gmail.com>
 Thomas Grainger <tagrain@gmail.com>
 Zygmunt Krynicki <zygmunt.krynicki@canonical.com>
 metazet <metazet.mail@gmail.com>
